# backend/api/gen/go/file/service/v1/file.pb.validate.go
@@ -931,6 +931,14 @@ func (m *UploadFileRequest) validate(all bool) error {
 		// no validation rules for File
 	}
 
+	if m.SourceFileName != nil {
+		// no validation rules for SourceFileName
+	}
+
+	if m.Mime != nil {
+		// no validation rules for Mime
+	}
+
 	if len(errors) > 0 {
 		return UploadFileRequestMultiError(errors)
 	}
