# backend/api/gen/go/file/service/v1/ueditor.pb.validate.go
@@ -35,110 +35,6 @@ var (
 	_ = sort.Sort
 )
 
-// Validate checks the field values on File with the rules defined in the proto
-// definition for this message. If any rules are violated, the first error
-// encountered is returned, or nil if there are no violations.
-func (m *File) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on File with the rules defined in the
-// proto definition for this message. If any rules are violated, the result is
-// a list of violation errors wrapped in FileMultiError, or nil if none found.
-func (m *File) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *File) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for FileName
-
-	// no validation rules for Mime
-
-	// no validation rules for Content
-
-	if len(errors) > 0 {
-		return FileMultiError(errors)
-	}
-
-	return nil
-}
-
-// FileMultiError is an error wrapping multiple validation errors returned by
-// File.ValidateAll() if the designated constraints aren't met.
-type FileMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m FileMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m FileMultiError) AllErrors() []error { return m }
-
-// FileValidationError is the validation error returned by File.Validate if the
-// designated constraints aren't met.
-type FileValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e FileValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e FileValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e FileValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e FileValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e FileValidationError) ErrorName() string { return "FileValidationError" }
-
-// Error satisfies the builtin error interface
-func (e FileValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sFile.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = FileValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = FileValidationError{}
-
 // Validate checks the field values on UEditorRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -616,39 +512,20 @@ func (m *UEditorUploadRequest) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for Action
+	if m.Action != nil {
+		// no validation rules for Action
+	}
 
 	if m.File != nil {
+		// no validation rules for File
+	}
 
-		if all {
-			switch v := interface{}(m.GetFile()).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, UEditorUploadRequestValidationError{
-						field:  "File",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, UEditorUploadRequestValidationError{
-						field:  "File",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(m.GetFile()).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return UEditorUploadRequestValidationError{
-					field:  "File",
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
+	if m.SourceFileName != nil {
+		// no validation rules for SourceFileName
+	}
 
+	if m.Mime != nil {
+		// no validation rules for Mime
 	}
 
 	if len(errors) > 0 {
